Minor map fixes

--- a/Tetris3D.uproject
+++ b/Tetris3D.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{90236C87-4E7A-6045-5AF0-558EC89F98D6}",
+	"EngineAssociation": "4.20",
 	"Category": "",
 	"Description": "",
 	"Modules": [
