--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -48,6 +48,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MoveBlockX-",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
 +ActionMappings=(ActionName="MoveBlockY+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Up)
 +ActionMappings=(ActionName="MoveBlockY-",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
++ActionMappings=(ActionName="RotateBlockZ+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=J)
++ActionMappings=(ActionName="RotateBlockY+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
++ActionMappings=(ActionName="RotateBlockX+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=L)
 +AxisMappings=(AxisName="CameraRotate",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="CameraElevate",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="CameraZoom",Scale=-40.000000,Key=MouseWheelAxis)
