--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Tetris3DGameModeBase_BP.Tetris3DGameModeBase_BP_C
-EditorStartupMap=/Game/Gameplay.Gameplay
+EditorStartupMap=/Game/Maps/testscene.testscene
+GameDefaultMap=/Game/Maps/testscene.testscene
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -54,5 +55,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
