--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -51,6 +51,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="RotateBlockZ+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=J)
 +ActionMappings=(ActionName="RotateBlockY+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
 +ActionMappings=(ActionName="RotateBlockX+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=L)
++ActionMappings=(ActionName="Drop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="CameraRotate",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="CameraElevate",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="CameraZoom",Scale=-40.000000,Key=MouseWheelAxis)
