Level filling mechanism (no particle effect yet)

--- a/Tetris3D.uproject
+++ b/Tetris3D.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "WA-420",
+	"EngineAssociation": "4.20",
 	"Category": "",
 	"Description": "",
 	"Modules": [
