Basic texture size optimization and fix for negative rotation of camera

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1FEB67BB46D6BE9BAFB63BB0A6370899
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+UsePakFile=False
+
