--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -48,10 +48,13 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MoveBlockX-",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
 +ActionMappings=(ActionName="MoveBlockY+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Up)
 +ActionMappings=(ActionName="MoveBlockY-",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
-+ActionMappings=(ActionName="RotateBlockZ+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=J)
-+ActionMappings=(ActionName="RotateBlockY+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
-+ActionMappings=(ActionName="RotateBlockX+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=L)
++ActionMappings=(ActionName="RotateBlockZ+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="RotateBlockY+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="RotateBlockX+",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
 +ActionMappings=(ActionName="Drop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="RotateBlockZ-",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="RotateBlockY-",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="RotateBlockX-",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +AxisMappings=(AxisName="CameraRotate",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="CameraElevate",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="CameraZoom",Scale=-40.000000,Key=MouseWheelAxis)
